<resources>
    <string name="app_name">MAD-Collaborative</string>
    <string name="Create_Your_Account">Create Your \nAccount</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="User">User</string>
    <string name="Organizer">Organizer</string>
    <string name="Back">Back</string>
    <string name="signup">Sign up</string>
    <string name="SignUp">Signup</string>
    <string name="Login">Login</string>
    <string name="Organization">Organization</string>
    <string name="Welcome_Back">Welcome Back!</string>
    <string name="Hello">Hello.</string>
    <string name="news1">The International 2025 will be held \nin Germany with veteran players returning \nand new comers alike, valve has also announced a \nnew coming hero coming this fall.</string>
    <string name="news2">Coming this winter, the brand \nnew release of the Araxys bundle, \nfeaturing the sheriff, vandal and phantom.</string>
    <string name="create">Create</string>
    <string name="created">Created</string>
    <string name="fill_all_fields">Please fill all fields and select an image</string>
    <string name="event_saved">Event saved successfully!</string>
    <string name="event_failed">Failed to save event</string>
</resources>
