<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        tools:ignore="UselessLeaf">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Create_Your_Account"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/green"/>
    </LinearLayout>


<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    app:cardCornerRadius="60dp"
    android:layout_marginBottom="-53dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="647dp"
        android:background="@drawable/signup_view"
        android:orientation="vertical"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_rounded_corner"
            android:drawableEnd="@drawable/done_icon"
            android:hint="@string/Username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="15sp"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Email"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_rounded_corner"
            android:drawableEnd="@drawable/done_icon"
            android:hint="@string/Email"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="15sp"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Password"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_rounded_corner"
            android:drawableEnd="@drawable/password_icon"
            android:hint="@string/Password"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="15sp"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Confirm_Password"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_rounded_corner"
            android:drawableEnd="@drawable/password_icon"
            android:hint="@string/Confirm_Password"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="15sp"
            tools:ignore="TextFields" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:buttonTint="@color/white"
            android:text="@string/User"
            android:minHeight="48dp"
            android:textColor="@color/white" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:buttonTint="@color/white"
            android:text="@string/Organizer"
            android:minHeight="48dp"
            android:textColor="@color/white" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_corner"
                android:text="@string/Back"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_corner2"
                android:text="@string/Next"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="265dp"
                tools:layout_editor_absoluteY="0dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>




</RelativeLayout>